--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "author": "eugenie9",
   "license": "ISC",
   "dependencies": {
-    "anychart": "8.3.0",
+    "anychart": "8.13.0",
     "anychart-nodejs": "1.3.8",
-    "axios": "^0.21.1",
-    "jsdom": "^16.4.0",
+    "axios": "^1.7.9",
+    "jsdom": "^22.1.0",
     "lowdb": "^1.0.0",
-    "node-binance-api": "^0.12.4",
-    "node-telegram-bot-api": "github:yagop/node-telegram-bot-api",
-    "puppeteer": "^8.0.0"
+    "node-binance-api": "^0.13.4",
+    "node-telegram-bot-api": "^0.66.0",
+    "puppeteer": "^24.2.1"
   }
 }
