--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "anychart": "8.13.0",
     "anychart-nodejs": "1.3.8",
     "axios": "^1.7.9",
+    "chart.js": "^3.9.1",
+    "chartjs-node-canvas": "^4.1.6",
     "jsdom": "^22.1.0",
     "lowdb": "^1.0.0",
     "node-binance-api": "^0.13.4",
