--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "lowdb": "^1.0.0",
     "node-binance-api": "^0.13.4",
     "node-telegram-bot-api": "^0.66.0",
-    "puppeteer": "^24.2.1"
+    "playwright": "^1.51.0"
   }
 }
